--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<canvas id="main" hidden></canvas>
+	<!-- <canvas id="main" hidden></canvas> -->
     <canvas id="viewport"></canvas>
     <br>
     <select name="levels" id="level_select" onchange="loadLevel(this)"onload="loadLevel(this)">
