--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <option value="level1">1 - Benjamero Weirdness</option>
         <option value="level2">2 - Føkk deg og bare deg, personlig</option>
     </select>
+	<button onclick="enableFullscreen()">Fullscreen</button>
     
 <script src="./maps/level1.js"></script>
 <script src="./maps/level2.js"></script>
