--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     <select name="levels" id="level_select" onchange="loadLevel(this)"onload="loadLevel(this)">
         <option value="level1">1 - Benjamero Weirdness</option>
         <option value="level2">2 - Føkk deg og bare deg, personlig</option>
+        <option value="level3">3 - Opp- og nedturer</option>
     </select>
 	<button onclick="enableFullscreen()">Fullscreen</button>
     
 <script src="./maps/level1.js"></script>
 <script src="./maps/level2.js"></script>
+<script src="./maps/level3.js"></script>
 <script src="utils.js"></script>
 <script src="classes.js"></script>
 <script src="collisions.js"></script>
